# agent-sdk-architecture

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  prompt-templates.md
evals/: smoke_cases.jsonl
prompts/: assistant.md  researcher.md  router.md
src/summit_agents/: cli.py  prompts.py  settings.py
src/summit_agents/agents/: __init__.py  factory.py
src/summit_agents/guardrails/: __init__.py
src/summit_agents/integrations/: __init__.py  mcp.py  storage.py
src/summit_agents/tools/: __init__.py  custom.py  examples.py  registry.py
src/summit_agents/workflows/: __init__.py  single_turn.py
tests/: test_prompt_loader.py
