[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "summit-agents-sdk-starter"
version = "0.1.0"
description = "Plug-and-play Python starter for OpenAI Agents SDK workshops and talks."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Summit IA 2026" }]
dependencies = [
  "openai-agents",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.9.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[project.scripts]
summit-agent = "summit_agents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/summit_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
